deploy: 677477071505fe2a4971eec1ce51e53c2fe586dd

--- a/index.html
+++ b/index.html
@@ -5,26 +5,26 @@
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BiWxchD-.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DUNLVavS.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DLkx2gOf.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CPp43FEC.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.BOwFYlz0.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.BCtDn-Ji.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.Tv_6mPwV.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.SbdP9t62.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.Dy59Beth.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1ws069i = {
+					__sveltekit_1dru6s2 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BiWxchD-.js"),
-						import("/_app/immutable/entry/app.Tv_6mPwV.js")
+						import("/_app/immutable/entry/start.DLkx2gOf.js"),
+						import("/_app/immutable/entry/app.SbdP9t62.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
