--- a/index.html
+++ b/index.html
@@ -5,26 +5,26 @@
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BdGiVXII.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CmzetbcR.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.1C1mPkld.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.Cco5JOT1.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.BOwFYlz0.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.BCtDn-Ji.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.CWnHPuFS.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.CcUAfVww.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.Dy59Beth.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1mmtgv1 = {
+					__sveltekit_1s6pehe = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BdGiVXII.js"),
-						import("/_app/immutable/entry/app.CWnHPuFS.js")
+						import("/_app/immutable/entry/start.1C1mPkld.js"),
+						import("/_app/immutable/entry/app.CcUAfVww.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
