--- a/index.html
+++ b/index.html
@@ -5,26 +5,26 @@
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BGNHjYo1.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CjY79JOX.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DoF_67jN.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DPoOgv11.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.BOwFYlz0.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.BCtDn-Ji.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.8PAPXwLF.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.DJorv3Lw.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.Dy59Beth.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_ptdoqb = {
+					__sveltekit_agr2fo = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BGNHjYo1.js"),
-						import("/_app/immutable/entry/app.8PAPXwLF.js")
+						import("/_app/immutable/entry/start.DoF_67jN.js"),
+						import("/_app/immutable/entry/app.DJorv3Lw.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
