deploy: ed0b85b3ff5d20e86dac9313011768733320cd29

--- a/index.html
+++ b/index.html
@@ -2,29 +2,30 @@
 <html lang="ja">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/favicon.png" />
+		<link rel="icon" href="/avs-frontend/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.DoF_67jN.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DPoOgv11.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.BOwFYlz0.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.BCtDn-Ji.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.DJorv3Lw.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.Dy59Beth.js">
+		<link rel="modulepreload" href="/avs-frontend/_app/immutable/entry/start.BsYdiyMD.js">
+		<link rel="modulepreload" href="/avs-frontend/_app/immutable/chunks/entry.D5ccw-LP.js">
+		<link rel="modulepreload" href="/avs-frontend/_app/immutable/chunks/scheduler.BOwFYlz0.js">
+		<link rel="modulepreload" href="/avs-frontend/_app/immutable/chunks/index.BCtDn-Ji.js">
+		<link rel="modulepreload" href="/avs-frontend/_app/immutable/entry/app.CukF-eHE.js">
+		<link rel="modulepreload" href="/avs-frontend/_app/immutable/chunks/index.Dy59Beth.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_agr2fo = {
-						base: ""
+					__sveltekit_18q1kfs = {
+						base: "/avs-frontend",
+						assets: "/avs-frontend"
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.DoF_67jN.js"),
-						import("/_app/immutable/entry/app.DJorv3Lw.js")
+						import("/avs-frontend/_app/immutable/entry/start.BsYdiyMD.js"),
+						import("/avs-frontend/_app/immutable/entry/app.CukF-eHE.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
