--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
 		<link rel="icon" href="/avs-frontend/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/avs-frontend/_app/immutable/entry/start.BsYdiyMD.js">
-		<link rel="modulepreload" href="/avs-frontend/_app/immutable/chunks/entry.D5ccw-LP.js">
+		<link rel="modulepreload" href="/avs-frontend/_app/immutable/entry/start.Bz1vEF6N.js">
+		<link rel="modulepreload" href="/avs-frontend/_app/immutable/chunks/entry.1Lu69dP5.js">
 		<link rel="modulepreload" href="/avs-frontend/_app/immutable/chunks/scheduler.BOwFYlz0.js">
 		<link rel="modulepreload" href="/avs-frontend/_app/immutable/chunks/index.BCtDn-Ji.js">
-		<link rel="modulepreload" href="/avs-frontend/_app/immutable/entry/app.CukF-eHE.js">
+		<link rel="modulepreload" href="/avs-frontend/_app/immutable/entry/app.D_X0oLbM.js">
 		<link rel="modulepreload" href="/avs-frontend/_app/immutable/chunks/index.Dy59Beth.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_18q1kfs = {
+					__sveltekit_ssxukd = {
 						base: "/avs-frontend",
 						assets: "/avs-frontend"
 					};
@@ -24,8 +24,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/avs-frontend/_app/immutable/entry/start.BsYdiyMD.js"),
-						import("/avs-frontend/_app/immutable/entry/app.CukF-eHE.js")
+						import("/avs-frontend/_app/immutable/entry/start.Bz1vEF6N.js"),
+						import("/avs-frontend/_app/immutable/entry/app.D_X0oLbM.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
