--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
 		<link rel="icon" href="/avs-frontend/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/avs-frontend/_app/immutable/entry/start.OEcnsXf3.js">
-		<link rel="modulepreload" href="/avs-frontend/_app/immutable/chunks/entry.n2ggr0G0.js">
+		<link rel="modulepreload" href="/avs-frontend/_app/immutable/entry/start.DzxqDNYy.js">
+		<link rel="modulepreload" href="/avs-frontend/_app/immutable/chunks/entry.4heuALle.js">
 		<link rel="modulepreload" href="/avs-frontend/_app/immutable/chunks/scheduler.BOwFYlz0.js">
 		<link rel="modulepreload" href="/avs-frontend/_app/immutable/chunks/index.BCtDn-Ji.js">
-		<link rel="modulepreload" href="/avs-frontend/_app/immutable/entry/app.CHidoSjx.js">
+		<link rel="modulepreload" href="/avs-frontend/_app/immutable/entry/app.BSSUsesL.js">
 		<link rel="modulepreload" href="/avs-frontend/_app/immutable/chunks/index.Dy59Beth.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_5owkya = {
+					__sveltekit_oosulw = {
 						base: "/avs-frontend",
 						assets: "/avs-frontend"
 					};
@@ -24,8 +24,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/avs-frontend/_app/immutable/entry/start.OEcnsXf3.js"),
-						import("/avs-frontend/_app/immutable/entry/app.CHidoSjx.js")
+						import("/avs-frontend/_app/immutable/entry/start.DzxqDNYy.js"),
+						import("/avs-frontend/_app/immutable/entry/app.BSSUsesL.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
