deploy: 8b753becaf5a2ba2fe8588393c4adc2d55902032

--- a/index.html
+++ b/index.html
@@ -2,30 +2,29 @@
 <html lang="ja">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/avs-frontend/favicon.png" />
+		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/avs-frontend/_app/immutable/entry/start.DzxqDNYy.js">
-		<link rel="modulepreload" href="/avs-frontend/_app/immutable/chunks/entry.4heuALle.js">
-		<link rel="modulepreload" href="/avs-frontend/_app/immutable/chunks/scheduler.BOwFYlz0.js">
-		<link rel="modulepreload" href="/avs-frontend/_app/immutable/chunks/index.BCtDn-Ji.js">
-		<link rel="modulepreload" href="/avs-frontend/_app/immutable/entry/app.BSSUsesL.js">
-		<link rel="modulepreload" href="/avs-frontend/_app/immutable/chunks/index.Dy59Beth.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BmDEcn0n.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CetMetL8.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.BOwFYlz0.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.BCtDn-Ji.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.FMcv5jje.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.Dy59Beth.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_oosulw = {
-						base: "/avs-frontend",
-						assets: "/avs-frontend"
+					__sveltekit_dfcous = {
+						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/avs-frontend/_app/immutable/entry/start.DzxqDNYy.js"),
-						import("/avs-frontend/_app/immutable/entry/app.BSSUsesL.js")
+						import("/_app/immutable/entry/start.BmDEcn0n.js"),
+						import("/_app/immutable/entry/app.FMcv5jje.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
