--- a/index.html
+++ b/index.html
@@ -5,26 +5,26 @@
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BmDEcn0n.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CetMetL8.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DIenEEv2.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.ZYVot5wQ.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.BOwFYlz0.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.BCtDn-Ji.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.FMcv5jje.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.DZUO_feH.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.Dy59Beth.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_dfcous = {
+					__sveltekit_pk70qj = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BmDEcn0n.js"),
-						import("/_app/immutable/entry/app.FMcv5jje.js")
+						import("/_app/immutable/entry/start.DIenEEv2.js"),
+						import("/_app/immutable/entry/app.DZUO_feH.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
