deploy: c3ef1e0ad092993fa4b3741d4c16f5446f00ebb6

--- a/index.html
+++ b/index.html
@@ -2,29 +2,30 @@
 <html lang="ja">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/favicon.png" />
+		<link rel="icon" href="/avs-frontend/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.DIenEEv2.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.ZYVot5wQ.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.BOwFYlz0.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.BCtDn-Ji.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.DZUO_feH.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.Dy59Beth.js">
+		<link rel="modulepreload" href="/avs-frontend/_app/immutable/entry/start.DSjlTAWC.js">
+		<link rel="modulepreload" href="/avs-frontend/_app/immutable/chunks/entry.DYvgZl_o.js">
+		<link rel="modulepreload" href="/avs-frontend/_app/immutable/chunks/scheduler.BOwFYlz0.js">
+		<link rel="modulepreload" href="/avs-frontend/_app/immutable/chunks/index.BCtDn-Ji.js">
+		<link rel="modulepreload" href="/avs-frontend/_app/immutable/entry/app.BSfj_5u-.js">
+		<link rel="modulepreload" href="/avs-frontend/_app/immutable/chunks/index.Dy59Beth.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_pk70qj = {
-						base: ""
+					__sveltekit_3rg9fd = {
+						base: "/avs-frontend",
+						assets: "/avs-frontend"
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.DIenEEv2.js"),
-						import("/_app/immutable/entry/app.DZUO_feH.js")
+						import("/avs-frontend/_app/immutable/entry/start.DSjlTAWC.js"),
+						import("/avs-frontend/_app/immutable/entry/app.BSfj_5u-.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
